<resources>
    <string name="app_name">PixelGuess</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="play_desc">play</string>
    <string name="load_title">Welcome to PixelGuess</string>
    <string name="play_btn">Play</string>
    <string name="load_image">Never stop drawing</string>
    <string name="Timer">00 secondes</string>


    <string name="Answer">Your Answer</string>
    <string name="Validate">Validate</string>

    <string name="PlayerResult">Player Result</string>
    <string name="PlayAgain">Next Player!</string>
    <string name="desc_text">
        Pixel Draw is a funny little game where your drawing skills will be judged... by your friends!
        Time to let your inner artist go wild! But mind the clock, 10 seconds is all you get...</string>
    <string name="lobby_title">You are currently in the lobby</string>
    <string name="wait_text">Waiting for other players to join the session...</string>
</resources>
