<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    tools:context=".LoadScreenActivity" >


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_large"
        android:textSize="30sp"
        android:text="@string/load_title" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/img_width"
        android:layout_height="@dimen/img_height"
        android:layout_gravity="center"
        android:src="@drawable/first_img"
        android:contentDescription="@string/desc_text" />


    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="@dimen/margin_large"
        android:textSize="14sp"
        android:text="@string/desc_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/play_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/play_btn"
            android:contentDescription="@string/play_desc"/>
    </LinearLayout>

</LinearLayout>
