<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    tools:context=".LobbyActivity" >


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_large"
        android:textSize="20sp"
        android:text="@string/lobby_title" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/img_width"
        android:layout_height="@dimen/img_height"
        android:layout_gravity="center"
        android:src="@drawable/loading"
        android:contentDescription="@string/desc_text" />


    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="@dimen/margin_large"
        android:textSize="14sp"
        android:text="@string/wait_text" />


</LinearLayout>
